--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,18 +8,19 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - uses: shivammathur/setup-php@v2  # Update to the latest version
       with:
-        php-version: '8.0'
-    - uses: actions/checkout@v3
+        php-version: '^8.1'
+    - uses: actions/checkout@v2  # Update to the latest version
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer update && composer validate && composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: |
+        composer validate
+        composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -30,6 +31,5 @@ jobs:
         touch database/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
-        DB_CONNECTION: mysql
-        DB_DATABASE: database/database.mysql
+        DB_CONNECTION: sqlite  # Update to use SQLite instead of MySQL
       run: vendor/bin/phpunit
