--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,11 +25,10 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite  # Update to use SQLite instead of MySQL
-      run: vendor/bin/phpunit
+    - name: Upload a Build Artifact of the project
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        name: FundFlex
+        path: ./
+        
+
