--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Base job for main Branch
 
 on:
   push:
@@ -25,10 +25,3 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Upload a Build Artifact of the project
-      uses: actions/upload-artifact@v3.1.3
-      with:
-        name: FundFlex
-        path: ./
-        
-
