--- a/.github/workflows/complete.yml
+++ b/.github/workflows/complete.yml
@@ -3,10 +3,10 @@ name: FundFlex Release
 on:
   push:
     branches:
-      - production
+      - Production
   pull_request:
     branches:
-      - production
+      - Production
 
 jobs:
   create-release:
@@ -37,11 +37,11 @@ jobs:
 
       - name: Create Tag
         run: git tag -a v1.0 -m "Release v1.0"
-        if: github.ref == 'refs/heads/production'  # Only create a tag for the production branch
+        if: github.ref == 'refs/heads/Production'  # Only create a tag for the Production branch
 
       - name: Push Tag
         run: git push origin v1.0
-        if: github.ref == 'refs/heads/production'  # Only push the tag for the production branch
+        if: github.ref == 'refs/heads/Production'  # Only push the tag for the Production branch
 
       - name: Create GitHub Release
         id: create_release
