--- a/.github/workflows/production_fundflex.yml
+++ b/.github/workflows/production_fundflex.yml
@@ -31,6 +31,9 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'true'
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
