--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,11 +17,25 @@ jobs:
     - uses: actions/checkout@v2  # Update to the latest version
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
     - name: Install Dependencies
       run: |
         composer validate
         composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
+    - name: Update the project environment
+      id: Update_env
+      run: |
+          echo "Setting up project environment variables"
+          echo "${{ secrets.ENV_FILE }}" > .env
+
     - name: Generate key
       run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+
+    - name: Install Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+
+    - name: Install NPM Dependencies
+      run: npm install
