removed draw.io files and bash script

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,7 +27,9 @@ jobs:
       id: Update_env
       run: |
           echo "Setting up project environment variables"
-          echo "${{ secrets.ENV_FILE }}" > .env
+          echo ${{ secrets.ENV_FILE }} > .env
+          echo "displaying .env file"
+          cat .env
 
     - name: Generate key
       run: php artisan key:generate
