--- a/.github/workflows/production_fundflex.yml
+++ b/.github/workflows/production_fundflex.yml
@@ -31,6 +31,15 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'true'
         run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
 
+      - name: Update the project environment
+        id: Update_env
+        run: |
+          echo "Setting up project environment variables"
+          echo "${{ secrets.ENV_FILE }}" > .env
+
+      - name: Generate key
+        run: php artisan key:generate
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
