--- a/.github/workflows/production_fundflex.yml
+++ b/.github/workflows/production_fundflex.yml
@@ -41,7 +41,7 @@ jobs:
         run: php artisan key:generate
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./* -r .env .env.sample
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -73,3 +73,9 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B10DC438E65E4660AF6938AB0626BE4C }}
           package: .
+
+      - name: 'display the directory'
+        run: 'ls -a'
+
+      - name: 'delete the artifact'
+        run: 'rm -rf release.zip'
