--- a/.github/workflows/production_fundflex.yml
+++ b/.github/workflows/production_fundflex.yml
@@ -47,35 +47,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: php-app
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: php-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'fundflex'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B10DC438E65E4660AF6938AB0626BE4C }}
-          package: .
-
-      - name: 'display the directory'
-        run: 'ls -a'
-
-      - name: 'delete the artifact'
-        run: 'rm -rf release.zip'
+          path: ./
