Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/production_fundflex.yml
+++ b/.github/workflows/production_fundflex.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - fundflex
+name: Build and deploy PHP app to Azure Web App - Fundflex
 
 on:
   push:
@@ -46,6 +46,8 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -55,12 +57,19 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FA84697A5A454EBD97A0BA59B73E65C5 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_97CCDCFCE0AC4153B5BCE568BC2553BE }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A8B3A941DC8643BC8E4B13D8D6D3341E }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'fundflex'
+          app-name: 'Fundflex'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E30015DAE28F4314BCC345C852A8A0AF }}
           package: .
+          
